Support user language preference (JENKINS-57456)